--- a/Aplikacja Chat/package.json
+++ b/Aplikacja Chat/package.json
@@ -4,13 +4,14 @@
   "description": "Chat app",
   "main": "index.js",
   "scripts": {
-    "build": "SET NODE_ENV=production webpack",
+    "build": "SET NODE_ENV=production && webpack",
     "start": "node index.js webpack-dev-server --inline --hot --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Adam Reszka",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
