--- a/Aplikacja Chat/package.json
+++ b/Aplikacja Chat/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "SET NODE_ENV=production && webpack",
-    "start": "node index.js webpack-dev-server --inline --hot --config ./webpack.config.js",
+    "start": " webpack-dev-server --hot --inline --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Adam Reszka",
